public class Stone extends Being{
    public void open() {
        System.out.println("水晶石打开");
    }

    public void close() {
        System.out.println("水晶石关上");
    }
}
